--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -46,7 +46,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install --yes libpulse-dev libasound2-dev libjack-dev qt5-default qt5-qmake qttools5-dev help2man
           python -m pip install --upgrade pip
-          pip install meson ninja
+          pip install meson ninja pyyaml jinja2
       - name: install dependencies for macOS
         if: runner.os == 'macOS'
         env:
