[Metainfo] Add categories

--- a/linux/org.jacktrip.JackTrip.metainfo.xml.in.in
+++ b/linux/org.jacktrip.JackTrip.metainfo.xml.in.in
@@ -7,6 +7,11 @@
   <name>JackTrip</name>
   <summary>Connect and play with other musicians</summary>
 
+  <categories>
+    <category>Audio</category>
+    <category>Network</category>
+  </categories>
+
   <description>
     <p>
       JackTrip is a cross-platform multi-machine audio system
