--- a/meson.build
+++ b/meson.build
@@ -16,9 +16,7 @@ compiler = meson.get_compiler('cpp')
 
 defines = ['-DWAIRTOHUB']
 c_defines = []
-if host_machine.system() == 'darwin'
-	defines += '-D__MAC_OSX__'
-elif host_machine.system() == 'windows'
+if host_machine.system() == 'windows'
 	defines += '-D__WIN_32__'
 	defines += '-D_WIN32_WINNT=0x0600'
 	defines += '-DWIN32_LEAN_AND_MEAN'
