--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -106,21 +106,29 @@ jobs:
           meson configure -Ddefault_library=both -Drtaudio:default_library=static -Drtaudio:wasapi=true -Drtaudio:jack=disabled -Dwingetopt:default_library=static -Dweakjack=true
           meson compile
       - name: Create results directory
-        if: runner.os == 'Linux'
+        if: |
+          runner.os == 'Linux' &&
+          github.event_name == 'pull_request'
         run: |
           mkdir clang-tidy-result
       - name: Analyze
-        if: runner.os == 'Linux'
+        if: |
+          runner.os == 'Linux' &&
+          github.event_name == 'pull_request'
         run: |
           git diff -U0 origin/${{ github.base_ref }} | clang-tidy-diff -p1 -path builddir -export-fixes clang-tidy-result/fixes.yml
       - name: Save PR metadata
-        if: runner.os == 'Linux'
+        if: |
+          runner.os == 'Linux' &&
+          github.event_name == 'pull_request'
         run: |
           echo ${{ github.event.number }} > clang-tidy-result/pr-id.txt
           echo ${{ github.event.pull_request.head.repo.full_name }} > clang-tidy-result/pr-head-repo.txt
           echo ${{ github.event.pull_request.head.ref }} > clang-tidy-result/pr-head-ref.txt
       - name: Upload static analysis
-        if: runner.os == 'Linux'
+        if: |
+          runner.os == 'Linux' &&
+          github.event_name == 'pull_request'
         uses: actions/upload-artifact@v2
         with:
           name: clang-tidy-result
