--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -30,7 +30,7 @@ jobs:
       fail-fast: false # don't abort if one of the build failse
       matrix:
         include:
-          - name: Linux-x64 # static qmake build
+          - name: Linux-x64-qmake-static
             runs-on: ubuntu-18.04
             system-rtaudio: false
             bundled-rtaudio: false # set either system-rtaudio or bundled-rtaudio as true, not both
@@ -47,7 +47,7 @@ jobs:
             build-system: qmake # qmake, meson, cmake (todo)
             # meson-library-type: shared # shared, static, both
             
-          - name: Linux-x64-bundled-rtaudio # uses static qt as well
+          - name: Linux-x64-qmake-static-bundled_rtaudio
             runs-on: ubuntu-18.04
             system-rtaudio: false
             bundled-rtaudio: true
@@ -59,7 +59,7 @@ jobs:
             # binary-path: binary
             build-system: qmake
 
-          - name: Linux-x64-shared-qmake-nogui
+          - name: Linux-x64-qmake-shared-nogui
             runs-on: ubuntu-18.04
             system-rtaudio: false
             bundled-rtaudio: false
@@ -67,7 +67,7 @@ jobs:
             weakjack: false
             build-system: qmake
 
-          - name: Linux-x64-shared-meson
+          - name: Linux-x64-meson-shared
             runs-on: ubuntu-18.04
             system-rtaudio: false
             bundled-rtaudio: false
@@ -78,7 +78,7 @@ jobs:
             build-system: meson
             meson-library-type: shared
             
-          # - name: Linux-x64-static-meson # meson static build doesn't work currently
+          # - name: Linux-x64-meson-shared # meson static build doesn't work currently
           #   runs-on: ubuntu-18.04
           #   system-rtaudio: false
           #   bundled-rtaudio: false
@@ -91,7 +91,7 @@ jobs:
           #   build-system: meson
           #   meson-library-type: static
 
-          - name: macOS-x64 # static qmake build
+          - name: macOS-x64-qmake-static
             runs-on: macos-10.15
             system-rtaudio: true
             bundled-rtaudio: false
@@ -105,7 +105,7 @@ jobs:
             installer-path: installer
             build-system: qmake
 
-          - name: macOS-x64-bundled-rtaudio
+          - name: macOS-x64-qmake-static-bundled_rtaudio
             runs-on: macos-10.15
             system-rtaudio: false
             bundled-rtaudio: true
@@ -119,7 +119,7 @@ jobs:
             # installer-path: installer
             build-system: qmake
 
-          - name: macOS-x64-shared-meson
+          - name: macOS-x64-meson-shared
             runs-on: macos-10.15
             system-rtaudio: false
             bundled-rtaudio: true
@@ -132,7 +132,7 @@ jobs:
             build-system: meson
             meson-library-type: both
             
-          - name: Windows-x64 # static qmake build
+          - name: Windows-x64-qmake-static
             runs-on: windows-2019
             system-rtaudio: true
             bundled-rtaudio: false
@@ -146,7 +146,7 @@ jobs:
             installer-path: installer
             build-system: qmake
             
-          - name: Windows-x64-bundled-rtaudio
+          - name: Windows-x64-qmake-static-bundled_rtaudio
             runs-on: windows-2019
             system-rtaudio: false
             bundled-rtaudio: true
@@ -158,7 +158,7 @@ jobs:
             # binary-path: binary
             build-system: qmake
 
-          - name: Windows-x64-shared
+          - name: Windows-x64-qmake-shared
             runs-on: windows-2019
             system-rtaudio: true
             bundled-rtaudio: false
@@ -170,7 +170,7 @@ jobs:
             # binary-path: binary
             build-system: qmake
             
-          - name: Windows-x64-shared-meson
+          - name: Windows-x64-meson-shared-bundled_rtaudio
             runs-on: windows-2019
             system-rtaudio: false
             bundled-rtaudio: true
