[GHA] move clang-tidy to jacktrip.yaml workflow

--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -3,7 +3,7 @@ name: Post the static analysis results
 
 on:
   workflow_run:
-    workflows: [ meson-build ]
+    workflows: [ build ]
     types: [ completed ]
 
 jobs:
