--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -47,6 +47,7 @@ jobs:
             # installer-path: installer # directory relative to build path; triggers installer creation and upload (macOS, Windows)
             build-system: qmake # qmake, meson, cmake (todo)
             # meson-library-type: shared # shared, static, both
+            # static-analysis: true # run clang-tidy static analysis (meson/Linux only)
             
           - name: Linux-x64-qmake-static-bundled_rtaudio
             runs-on: ubuntu-18.04
@@ -69,7 +70,7 @@ jobs:
             build-system: qmake
 
           - name: Linux-x64-meson-shared
-            runs-on: ubuntu-18.04
+            runs-on: ubuntu-20.04
             system-rtaudio: false
             bundled-rtaudio: false
             nogui: false
@@ -78,6 +79,7 @@ jobs:
             # binary-path: binary
             build-system: meson
             meson-library-type: shared
+            static-analysis: true
             
           # - name: Linux-x64-meson-shared # meson static build doesn't work currently
           #   runs-on: ubuntu-18.04
@@ -192,10 +194,13 @@ jobs:
       QT_SRC_PATH: ${{ github.workspace }}/../qt-static-src
       QT_STATIC_BUILD_PATH: ${{ github.workspace }}/../qt-static
       QT_STATIC_OPTIONS: '-static -release -optimize-size -no-pch -nomake tools -nomake tests -nomake examples -opensource -confirm-license -skip webengine -skip qt3d -skip qtactiveqt -skip qtandroidextras -skip qtcharts -skip qtdatavis3d -skip qtdeclarative -skip qtdoc -skip qtgamepad -skip qtgraphicaleffects -skip qtimageformats -skip qtlocation -skip qtmultimedia -skip qtpurchasing -skip qtpurchasing -skip qtquickcontrols -skip qtquickcontrols2 -skip qtremoteobjects -skip qtscript -skip qtsensors -skip qtserialbus -skip qtserialport -skip qtspeech -skip qtsvg -skip qttools -skip qtvirtualkeyboard -skip qtwebchannel -skip qtwebengine -skip qtwebglplugin -skip qtwebsockets -skip qtwebview -skip qtxmlpatterns' # common for all platforms
+      CLANG_TIDY_NAME: clang-tidy-result
+      CLANG_TIDY_PATH: ${{ github.workspace }}/clang-tidy-result
       
     steps:
       - uses: actions/checkout@v2
         with:
+          fetch-depth: 0
           submodules: true
       - name: set version string for artifacts
         shell: bash
@@ -234,7 +239,7 @@ jobs:
             sudo apt-get install --yes libasound2-dev libpulse-dev
           fi
           if [[ "${{ matrix.build-system }}" == "meson" ]]; then
-            sudo apt-get install --yes help2man
+            sudo apt-get install --yes help2man clang-tidy
             python -m pip install --upgrade pip
             pip install meson ninja pyyaml Jinja2
           fi
@@ -461,6 +466,25 @@ jobs:
         with:
           name: JackTrip-${{ steps.set-version.outputs.version }}-${{ steps.set-version.outputs.name }}-installer
           path: ${{ env.BUILD_PATH }}/${{ matrix.installer-path }}
+      - name: analyze build
+        if: github.event_name == 'pull_request' && matrix.static-analysis == true
+        shell: bash
+        run: |
+          mkdir $CLANG_TIDY_PATH
+          git diff -U0 origin/${{ github.base_ref }} | clang-tidy-diff -p1 -path $BUILD_PATH -export-fixes $CLANG_TIDY_PATH/fixes.yml
+      - name: save PR metadata for static analysis
+        if: github.event_name == 'pull_request' && matrix.static-analysis == true
+        shell: bash
+        run: |
+          echo ${{ github.event.number }} > $CLANG_TIDY_PATH/pr-id.txt
+          echo ${{ github.event.pull_request.head.repo.full_name }} > $CLANG_TIDY_PATH/pr-head-repo.txt
+          echo ${{ github.event.pull_request.head.ref }} > $CLANG_TIDY_PATH/pr-head-ref.txt
+      - name: upload static analysis
+        if: github.event_name == 'pull_request' && matrix.static-analysis == true
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ env.CLANG_TIDY_NAME }}
+          path: ${{ env.CLANG_TIDY_PATH }}/
   # release - list of files uploaded to GH release is specified in the *upload* step
   deploy_gh:
     if: startsWith(github.ref, 'refs/tags/') # run on tagged commits
