--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -246,7 +246,7 @@ jobs:
             sudo apt-get install --yes qt5-default qt5-qmake qttools5-dev
           fi
           if [[ "${{ matrix.system-rtaudio }}" == true ]]; then 
-            sudo apt-get install --yes rtaudio
+            sudo apt-get install --yes librtaudio-dev
           fi
           if [[ "${{ matrix.bundled-rtaudio }}" == true ]]; then 
             sudo apt-get install --yes libasound2-dev libpulse-dev
