--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -169,7 +169,7 @@ jobs:
             bundled-rtaudio: false
             nogui: false
             weakjack: true
-            vcpkg-triplet: x64-mingw-shared
+            vcpkg-triplet: x64-mingw-dynamic
             qt-arch: 'win64_mingw81'
             # jacktrip-path: release/jacktrip.exe
             # binary-path: binary
@@ -288,14 +288,14 @@ jobs:
         run: |
           choco install jack --version=1.9.17 --no-progress
           choco install openssl --no-progress
-          if [[ "${{ matrix.system-rtaudio }}" == true ]]; then 
+          if [[ "${{ matrix.system-rtaudio }}" == true && -n "${{ matrix.vcpkg-triplet }}" ]]; then 
             choco install pkgconfiglite --no-progress
             # check out an older version of rtaudio library, see issue #408
             cd $VCPKG_INSTALLATION_ROOT
             git fetch origin f60125a3a1f527f1bbeeff6ccfdde43634a64235
             git checkout f60125a3a1f527f1bbeeff6ccfdde43634a64235 -- ports/rtaudio
-            vcpkg install rtaudio[asio] --triplet=x64-mingw-static
-            echo "PKG_CONFIG_PATH=$VCPKG_INSTALLATION_ROOT\installed\x64-mingw-static\lib\pkgconfig" >> $GITHUB_ENV
+            vcpkg install rtaudio[asio] --triplet="${{ matrix.vcpkg-triplet }}"
+            echo "PKG_CONFIG_PATH=$VCPKG_INSTALLATION_ROOT\installed\${{ matrix.vcpkg-triplet }}\lib\pkgconfig" >> $GITHUB_ENV
           fi
           if [[ "${{ matrix.build-system }}" == "meson" ]]; then
             python -m pip install --upgrade pip
